stashcache-chicago.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    k8s-app: stashcache
  name: stashcache-chicago
  namespace: osg
spec:
  replicas: 1
  template:
    metadata:
      labels:
        k8s-app: stashcache
    spec:
      hostNetwork: true
      nodeSelector:
        kubernetes.io/hostname: osg.chic.nrp.internet2.edu
      containers:
      - name: stashcache
        image: efajardo/prp-stashcache
        #command: ["sh", "-c", "sleep infinity"]
        imagePullPolicy: Always
        volumeMounts:
        #- name: hostcert
        #  mountPath: /etc/grid-security/hostcert.pem
        #- name: hostkey
        #  mountPath: /etc/grid-security/hostkey.pem
        - name: config
          mountPath: /etc/xrootd
        - name: datavol
          mountPath: /data
      volumes:
      #- name : hostcert
      #  hostPath:
      #     path: /etc/grid-security/hostcert.pem
      #     type: File
      #- name : hostkey
      #  hostPath:
      #     path: /etc/grid-security/hostkey.pem
      #     type: File
      - name: config
        configMap:
          name: stashcache
      - name: datavol
        hostPath:
          path: /tank
          type: Directory
