stashcache-ny.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    k8s-app: stashcache
  name: stashcache-ny
  namespace: osg
spec:
  replicas: 1
  template:
    metadata:
      labels:
        k8s-app: stashcache
    spec:
      hostNetwork: true
      nodeSelector:
        kubernetes.io/hostname: osg.newy32aoa.nrp.internet2.edu
      containers:
      - name: stashcache
        image: efajardo/prp-stashcache
        #command: ["sh", "-c", "sleep infinity"]
        imagePullPolicy: Always
        volumeMounts:
        - name: certs
          mountPath: /etc/grid-security/xrd
          readOnly: true
        - name: config
          mountPath: /etc/xrootd
        - name: datavol
          mountPath: /data
      volumes:
      - name: certs
        secret:
          secretName: certs
      - name: config
        configMap:
          name: stashcache
      - name: datavol
        hostPath:
          path: /tank
          type: Directory
