stashcache-ucsd.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    k8s-app: stashcache
  name: stashcache-ucsd
  namespace: osg
spec:
  replicas: 1
  template:
    metadata:
      labels:
        k8s-app: stashcache
    spec:
      hostNetwork: true
      nodeSelector:
        kubernetes.io/hostname: xcache-11.t2.ucsd.edu
      containers:
      - name: stashcache
        image: efajardo/prp-stashcache
        imagePullPolicy: Always
        volumeMounts:
        - name: certs
          mountPath: /etc/grid-security/xrd
          readOnly: true
        - name: config
          mountPath: /etc/xrootd
      volumes:
      - name: certs
        secret:
          secretName: certs
      - name: config
        configMap:
          name: stashcache
      - name: datavol1
        hostPath:
          path: /data1
          type: Directory
      - name: datavol2
        hostPath:
          path: /data2
          type: Directory
      - name: datavol3
        hostPath:
          path: /data3
          type: Directory
